# metroskrew

./: .gitignore  .gitmodules  Makefile  Makefile.old  main.c  meson.build  meson_options.txt  scan.c  script.gdb  test.c  test.sh  todo.txt
bins/: meson.build  scan.sh
data/: meson.build  sdk.sh
dlls/: _macros.i  _port.i  _utils.c  _utils.h  advapi32.c  advapi32.s  kernel32.c  kernel32.s  macros.i  meson.build  ole32.c  ole32.s  user32.c  user32.s  utils.h  version.c  version.s  ws2_32.s
meson/: cc-m32.ini  glibc_start.c  glibc_symver.h  i686-unknown-linux-gnu.ini  i686-w64-mingw32.ini  relpath.py
patch/: FUN_00505340.c  depfile_build.c  env.c  include.h  memreuse01.c  meson.build  patch.i  r2scan.sh  scan.c
releng/: release.sh  release_libs.sh  release_linux.sh  release_windows.sh  release_wine.sh
relink/: Makefile  dllimport.ld  dllimport.s  dump.c  entry.s  env.c  link.ld  link.ld.in  macros.i  meson.build  mwasmarm.ld  mwasmarm_patch.s  mwccarm.ld  mwccarm_patch.s  mwldarm_patch.s  patch.i  patch.s  stat.i  sysdeps.c  utils.c  utils.h  utils.s
relink/dlls/: advapi32.s  kernel32.c  kernel32.s  lmgr8c.c  lmgr8c.def  lmgr8c.s  macros.i  ole32.s  user32.c  user32.s  version.c  version.s  ws2_32.s
relink_asm/: Makefile  entry.s  utils.s
relink_asm/dlls/: advapi32.s  kernel32.s  lmgr8c.s  macros.i  ole32.s  user32.s  version.s  ws2_32.s
subprojects/: .gitignore  mingw-w64.wrap  mw-executables.wrap  wine.wrap
subprojects/packagefiles/mingw-w64-v11.0.1/: meson.build
subprojects/packagefiles/mingw-w64-v11.0.1/mingw-w64-headers/: meson.build
subprojects/packagefiles/mingw-w64-v11.0.1/mingw-w64-headers/crt/: meson.build
subprojects/packagefiles/mw-executables/: meson.build  scan.sh
subprojects/packagefiles/wine-10.0/: meson.build  meson_options.txt
subprojects/packagefiles/wine-10.0/tools/widl/: meson.build
subprojects/packagefiles/wine-9.0/: meson.build  meson_options.txt
subprojects/packagefiles/wine-9.0/include/: meson.build
subprojects/packagefiles/wine-9.0/tools/widl/: meson.build
test/: basic_c.c  basic_s.s  deps.c  deps.d  gen.sh  link.lcf  memreuse01_bug.c  meson.build  switch_float_bug.c  test.sh
wrap/: meson.build  test.sh  wine_wrap.in  wrap.c
