bins_dir = meson.global_source_root() / get_option('bins')

versions = [
  ['mwasmarm-1.0-19', 'ds/1.2/base/mwasmarm.exe',
    '87f942cc0a0e90e73550d8d6f3fffcdeb5f69fa5'],
  ['mwasmarm-1.0-19', 'ds/1.2/base_b73/mwasmarm.exe',
    '87f942cc0a0e90e73550d8d6f3fffcdeb5f69fa5'],
  ['mwasmarm-1.0-19', 'ds/1.2/sp2/mwasmarm.exe',
    '87f942cc0a0e90e73550d8d6f3fffcdeb5f69fa5'],
  ['mwasmarm-1.0-19', 'ds/1.2/sp2p3/mwasmarm.exe',
    '87f942cc0a0e90e73550d8d6f3fffcdeb5f69fa5'],
  ['mwasmarm-1.0-19', 'ds/1.2/sp3/mwasmarm.exe',
    '87f942cc0a0e90e73550d8d6f3fffcdeb5f69fa5'],
  ['mwasmarm-1.0-20', 'ds/1.2/sp4/mwasmarm.exe',
    '1e34523f58bedb0572d374e68bb304844bf2aec5'],
  ['mwasmarm-1.0-20', 'ds/2.0/base/mwasmarm.exe',
    '9d63877c776245129b4727b41d3e9e63cfc9cd28'],
  ['mwasmarm-1.0-23', 'ds/2.0/sp1/mwasmarm.exe',
    '448cb0c7f1ace4393e9a9562f819f7a9f049be83'],
  ['mwasmarm-1.0-23', 'ds/2.0/sp1p2/mwasmarm.exe',
    '448cb0c7f1ace4393e9a9562f819f7a9f049be83'],
  ['mwasmarm-1.0-23', 'ds/2.0/sp1p5/mwasmarm.exe',
    '448cb0c7f1ace4393e9a9562f819f7a9f049be83'],
  ['mwasmarm-1.0-23', 'ds/2.0/sp1p6/mwasmarm.exe',
    '448cb0c7f1ace4393e9a9562f819f7a9f049be83'],
  ['mwasmarm-1.0-23', 'ds/2.0/sp1p7/mwasmarm.exe',
    '448cb0c7f1ace4393e9a9562f819f7a9f049be83'],
  ['mwasmarm-1.0-23', 'ds/2.0/sp2/mwasmarm.exe',
    '448cb0c7f1ace4393e9a9562f819f7a9f049be83'],
  ['mwasmarm-1.0-23', 'ds/2.0/sp2p2/mwasmarm.exe',
    '448cb0c7f1ace4393e9a9562f819f7a9f049be83'],
  ['mwasmarm-1.0-23', 'ds/2.0/sp2p3/mwasmarm.exe',
    '448cb0c7f1ace4393e9a9562f819f7a9f049be83'],
  ['mwasmarm-1.0-23', 'ds/2.0/sp2p4/mwasmarm.exe',
    '448cb0c7f1ace4393e9a9562f819f7a9f049be83'],
  ['mwasmarm-1.0-26', 'dsi/1.1/mwasmarm.exe',
    '7705de17a1eae1b9f181b242232cea0ebbc376d9'],
  ['mwasmarm-1.0-26', 'dsi/1.1p1/mwasmarm.exe',
    '7705de17a1eae1b9f181b242232cea0ebbc376d9'],
  ['mwasmarm-1.0-27', 'dsi/1.2/mwasmarm.exe',
    '9001d3e959b13bbfe6b571584516de02284c620c'],
  ['mwasmarm-1.0-27', 'dsi/1.2p1/mwasmarm.exe',
    '9001d3e959b13bbfe6b571584516de02284c620c'],
  ['mwasmarm-1.0-27', 'dsi/1.2p2/mwasmarm.exe',
    '9001d3e959b13bbfe6b571584516de02284c620c'],
  ['mwasmarm-1.0-27', 'dsi/1.3/mwasmarm.exe',
    'f0cd32ceed0f9cf3c1c2fdc8d24a1c1278dbd3d2'],
  ['mwasmarm-1.0-27', 'dsi/1.3p1/mwasmarm.exe',
    'f0cd32ceed0f9cf3c1c2fdc8d24a1c1278dbd3d2'],
  ['mwasmarm-1.0-27', 'dsi/1.6sp1/mwasmarm.exe',
    'a601de1627529c6c8a8baf780bfb56f8bd2ae886'],
  ['mwasmarm-1.0-27', 'dsi/1.6sp2/mwasmarm.exe',
    'a601de1627529c6c8a8baf780bfb56f8bd2ae886'],
  ['mwccarm-2.0-72', 'ds/1.2/base/mwccarm.exe',
    '196804fe50c9b98004610b9d0c4fb1c372f6ae1a'],
  ['mwccarm-2.0-73', 'ds/1.2/base_b73/mwccarm.exe',
    '98bb73613f11a77b9a587a04575c0207887b5d7b'],
  ['mwccarm-2.0-79', 'ds/1.2/sp2/mwccarm.exe',
    '5ef84189f5597238116abb0e2d04f755e6233c13'],
  ['mwccarm-2.0-82', 'ds/1.2/sp2p3/mwccarm.exe',
    '45404f282dfbcd461d3a49f8fb54b6fb8aaa60f0'],
  ['mwccarm-2.0-84', 'ds/1.2/sp3/mwccarm.exe',
    'ef95fb245ee849486e80ce78b7526eb6d0618437'],
  ['mwccarm-2.0-87', 'ds/1.2/sp4/mwccarm.exe',
    'b0ecdfdfc40be4baf866749b6fde2da27f79e128'],
  ['mwccarm-3.0-114', 'ds/2.0/base/mwccarm.exe',
    '6b5cd5c683c50ae19b299bcfff54ba5f3dd69294'],
  ['mwccarm-3.0-123', 'ds/2.0/sp1/mwccarm.exe',
    '2aff76bfe3644266a8395469be0e01e9ebf2ceb9'],
  ['mwccarm-3.0-126', 'ds/2.0/sp1p2/mwccarm.exe',
    '69a86d45329772262d93210fba371eead0927149'],
  ['mwccarm-3.0-131', 'ds/2.0/sp1p5/mwccarm.exe',
    '6153c610734690650e563e03c5bbf45c9a060ee6'],
  ['mwccarm-3.0-133', 'ds/2.0/sp1p6/mwccarm.exe',
    '1ce426d41f61415974c0a792674f989d482daf59'],
  ['mwccarm-3.0-134', 'ds/2.0/sp1p7/mwccarm.exe',
    '58fdcdc809e13e7d1126bf8a592db0389ec8079f'],
  ['mwccarm-3.0-136', 'ds/2.0/sp2/mwccarm.exe',
    'a5f67782a6f0c3e05bf86e2d4fbb20adec0f12d3'],
  ['mwccarm-3.0-137', 'ds/2.0/sp2p2/mwccarm.exe',
    '9a95a7959b22d68b4cec9d62ff5ac9397fa340ab'],
  ['mwccarm-3.0-138', 'ds/2.0/sp2p3/mwccarm.exe',
    '44e2f4ed40effd7d5a1dfcd6864377adc3432374'],
  ['mwccarm-3.0-139', 'ds/2.0/sp2p4/mwccarm.exe',
    '96436b04f91da890a460c618fb1e0d23b60c4fb7'],
  ['mwccarm-4.0-1018', 'dsi/1.1/mwccarm.exe',
    '5233a8a7d8f0061abcfab533b68e0f6aaf1c96dc'],
  ['mwccarm-4.0-1024', 'dsi/1.1p1/mwccarm.exe',
    '030723f71d3439ef24a33f6cafbbd02a1eb1aa64'],
  ['mwccarm-4.0-1026', 'dsi/1.2/mwccarm.exe',
    'c792dee888f5dfec522add158163f7a09703ee75'],
  ['mwccarm-4.0-1027', 'dsi/1.2p1/mwccarm.exe',
    '713b3c39fa8fee3f3211c63b84782bc6260e80c3'],
  ['mwccarm-4.0-1028', 'dsi/1.2p2/mwccarm.exe',
    'a5d0ab25f5e98c863b637d448955c3ad755e19e2'],
  ['mwccarm-4.0-1034', 'dsi/1.3/mwccarm.exe',
    'dbd8ac1393085458272cad3c3d96242e81b97f9e'],
  ['mwccarm-4.0-1036', 'dsi/1.3p1/mwccarm.exe',
    '087cefe2e6d5109987e9abced964325116c56564'],
  ['mwccarm-4.0-1051', 'dsi/1.6sp1/mwccarm.exe',
    '79e245b457c946f7bdd4cb8e7bbd1f59de34a3a3'],
  ['mwccarm-4.0-1051', 'dsi/1.6sp2/mwccarm.exe',
    '79e245b457c946f7bdd4cb8e7bbd1f59de34a3a3'],
  ['mwldarm-2.0-72', 'ds/1.2/base/mwldarm.exe',
    '6e42dd1d033c999766bbf7b5c6281856fc3505f9'],
  ['mwldarm-2.0-72', 'ds/1.2/base_b73/mwldarm.exe',
    '6e42dd1d033c999766bbf7b5c6281856fc3505f9'],
  ['mwldarm-2.0-74', 'ds/1.2/sp2/mwldarm.exe',
    'e99b9beecfd3b1bfedeaa0a20897c44e7e718db8'],
  ['mwldarm-2.0-76', 'ds/1.2/sp2p3/mwldarm.exe',
    '2340837207739450905af996a613bea02f80bc0c'],
  ['mwldarm-2.0-77', 'ds/1.2/sp3/mwldarm.exe',
    '76d5e65d7fc99509d3745f72eabe6cf6d8e2cf58'],
  ['mwldarm-2.0-77', 'ds/1.2/sp4/mwldarm.exe',
    '76d5e65d7fc99509d3745f72eabe6cf6d8e2cf58'],
  ['mwldarm-2.0-82', 'ds/2.0/base/mwldarm.exe',
    '279022977de1f7d5f83edef5b05be87957cb5702'],
  ['mwldarm-2.0-84', 'ds/2.0/sp1/mwldarm.exe',
    '5945e78d980a6fb7c3edf4244eac2cfa612d0476'],
  ['mwldarm-2.0-84', 'ds/2.0/sp1p2/mwldarm.exe',
    '5945e78d980a6fb7c3edf4244eac2cfa612d0476'],
  ['mwldarm-2.0-85', 'ds/2.0/sp1p5/mwldarm.exe',
    'ccb5234d79b65e80202ab019890a35ae90da88c9'],
  ['mwldarm-2.0-87', 'ds/2.0/sp1p6/mwldarm.exe',
    '671021df48ba8d2df4dca4c823fde4798ff923e5'],
  ['mwldarm-2.0-87', 'ds/2.0/sp1p7/mwldarm.exe',
    '671021df48ba8d2df4dca4c823fde4798ff923e5'],
  ['mwldarm-2.0-87', 'ds/2.0/sp2/mwldarm.exe',
    '671021df48ba8d2df4dca4c823fde4798ff923e5'],
  ['mwldarm-2.0-87', 'ds/2.0/sp2p2/mwldarm.exe',
    '671021df48ba8d2df4dca4c823fde4798ff923e5'],
  ['mwldarm-2.0-87', 'ds/2.0/sp2p3/mwldarm.exe',
    '671021df48ba8d2df4dca4c823fde4798ff923e5'],
  ['mwldarm-2.0-87', 'ds/2.0/sp2p4/mwldarm.exe',
    '671021df48ba8d2df4dca4c823fde4798ff923e5'],
  ['mwldarm-2.0-96', 'dsi/1.1/mwldarm.exe',
    '379b1c51c5a4e3a452ce296b8c84a04cc2849065'],
  ['mwldarm-2.0-96', 'dsi/1.1p1/mwldarm.exe',
    '379b1c51c5a4e3a452ce296b8c84a04cc2849065'],
  ['mwldarm-2.0-98', 'dsi/1.2/mwldarm.exe',
    'b4aab084ef64a067e081ded810fa8439b8544683'],
  ['mwldarm-2.0-99', 'dsi/1.2p1/mwldarm.exe',
    '814971824ed304295e55864f1444acf32dfaf799'],
  ['mwldarm-2.0-99', 'dsi/1.2p2/mwldarm.exe',
    '814971824ed304295e55864f1444acf32dfaf799'],
  ['mwldarm-2.0-99', 'dsi/1.3/mwldarm.exe',
    '243283ca73517c67769f0be5dabd6997c794e839'],
  ['mwldarm-2.0-99', 'dsi/1.3p1/mwldarm.exe',
    '243283ca73517c67769f0be5dabd6997c794e839'],
  ['mwldarm-2.0-99', 'dsi/1.6sp1/mwldarm.exe',
    'e6589e421aa07730c0be2ff86dd43d4866d7a7ed'],
  ['mwldarm-2.0-99', 'dsi/1.6sp2/mwldarm.exe',
    'e6589e421aa07730c0be2ff86dd43d4866d7a7ed'],
]

bins = {}
bins_paths = {}
foreach x : versions
  bin = x[0]
  path = x[1]
  sum = x[2]

  # All the binaries with the same build number but differing hash have been
  # checked and only differ in their build dates. It's useless to keep them.
  if bin in bins
    continue
  endif

  bins += {bin: files(bins_dir / path)}
  bins_paths += {bin: path}
endforeach
